# onlyfilms

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  lint.bat  pyproject.toml  setup.cfg
onlyfilms/: __init__.py  __main__.py  app.py  manager.py
onlyfilms/admin/: __init__.py  views.py
onlyfilms/api/: __init__.py  api.py  films.py
onlyfilms/models/: orm.py  request_models.py  response_models.py
onlyfilms/view/: __init__.py  app.py
onlyfilms/view/static/css/: for_forms.css  index_style.css
onlyfilms/view/templates/: 404.html  base.html  filmpage.html  index.html  login.html  register.html
tests/: conftest.py  test_admin.py  test_api_films.py  test_authorization.py  test_manager.py
