[tool.poetry]
name = "onlyfilms"
version = "0.1.0"
description = ""
authors = ["okumuramura"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
SQLAlchemy = "^1.4.32"
typer = "^0.4.0"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
bcrypt = "^3.2.0"
pydantic = "^1.9.0"
Flask-Admin = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
isort = "^5.10.0"
black = "^22.1"
unify = "^0.5"
flake8 = "^4.0"
pylint = "^2.12.1"
mypy = "^0.940"
pytest-mock = "^3.7.0"
safety = "^1.10.3"
lxml = "^4.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
